--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
 	font-size: 11pt;
 	line-height: 1.6em;
 	font-family: "Lucida Console", Monaco, monospace;
-	color: #adadad;
 	background: url("images/solidcolourbg.jpg");
 	background-size: cover;
 }
@@ -81,4 +80,12 @@ nav a::before {
 
 nav a:hover::before {
   width: 100%;
+}
+
+.large {
+	font-size: xx-large;
+}
+
+.centre {
+	text-align: center;
 }
