--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav ul {
 
 nav li {
   display: inline-block;
-  margin-left: 70px;
+  margin-left: 50px;
   padding-top: 35px;
 
   position: relative;
@@ -88,6 +88,10 @@ nav a:hover::before {
 
 .centre {
 	text-align: center;
+}
+
+.underline {
+	text-decoration: underline;
 }
 
 /* Styles!!!!
